# News_sentiment_analysis_AWS

./: .gitignore  =4.0  Dockerfile  README.md  docker-compose-pg.yml  make_urllib.sh  newsapi_psy.sh  pyproject.toml
code/: streamlitapp.py
code/lambda_/: lambda_function.py
lambda_/: lambda_function.py
